--- a/doc/file.man
+++ b/doc/file.man
@@ -1,5 +1,5 @@
 .TH FILE 1 "Copyright but distributable"
-.\# $Id: file.man,v 1.17 1992/09/08 16:15:57 ian Exp $
+.\# $Id: file.man,v 1.18 1992/09/11 11:50:17 ian Exp $
 .SH NAME
 .I file
 \- determine file type
@@ -252,6 +252,11 @@ program, and are not covered by the above restrictions.
 .SH BUGS
 There must be a better way to automate the construction of the Magic
 file from all the glop in Magdir. What is it?
+Better yet, the magic file should be compiled into binary (say, ndbm(3) or,
+better yet, fixed-length ASCII strings 
+for use in heterogenous network environments) for faster startup.
+Then the program would run as fast as the Version 7 program of the same name,
+with the flexibility of the System V version.
 .PP
 .I File
 uses several algorithms that favor speed over accuracy,
@@ -260,7 +265,7 @@ thus it can be misled about the contents of ASCII files.
 The support for ASCII files (primarily for programming languages)
 is simplistic, inefficient and requires recompilation to update.
 .PP
-Should there be an ``else'' clause to follow a series of continuation lines?
+There should be an ``else'' clause to follow a series of continuation lines.
 .PP
 The magic file and keywords should have regular expression support.
 Their use of ASCII TAB as a field delimiter is ugly and makes
@@ -279,15 +284,6 @@ The list of keywords in
 .I ascmagic
 probably belongs in the Magic file.
 This could be done by using some keyword like `*' for the offset value.
-.PP
-The magic file should be compiled into binary 
-(or better yet, fixed-length ASCII strings 
-for use in heterogenous network environments) for faster startup.
-Then the program would run as fast as the Version 7 program of the same name,
-with the flexibility of the System V version.
-But then there would have to be yet another magic number for the 
-.I magic.out
-file.
 .PP
 Another optimisation would be to sort
 the magic file so that we can just run down all the
