--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ** README for file(1) Command **
-@(#) $Id: README,v 1.16 1992/09/09 16:31:46 ian Exp $
+@(#) $Id: README,v 1.17 1992/09/11 11:54:15 ian Exp $
 
 This is Release 3.0 of Ian Darwin's (copyright but distributable)
 file(1) command.  Release 3.0 is scheduled for inclusion in the
@@ -17,18 +17,8 @@ to include the code...), his HP-like "indirection" (a feature of
 the HP file command, I think), his mods that finally got the
 uncompress (-z) mode finished and working.
 
-This release has compiled in the following environments:
-
-SunOS sqarc 4.1.1 8 sun4
-	No problems.
-AIX sqibm 2 3 000XXXXXX100
-	Had weird "make" problems making "magic" file automatically; just
-	built it by hand. Your mileage may vary.
-A/UX sqmac 3.0a9 SVR22 mc68020
-	It works.
-sqzme sqzme 3.1.1 3 3B2
-	The 3B2 SVR3 needed a few tweaks as well as COPTS = -Ilocalinc
-	in order to compile.
+This release has compiled in numerous environments; see PORTING
+for a list and problems.
 
 This fine freeware file(1) follows the USG (System V) model of the file
 command, rather than the Research (V7) version or the V7-derived 4.[23]
