--- a/magic/Magdir/news
+++ b/magic/Magdir/news
@@ -1,4 +1,7 @@
-# NeWS, not "news" as in "netnews"
+
+#------------------------------------------------------------------------------
+# news:  file(1) magic for Sun(?) NeWS fonts (not "news" as in "netnews")
+#
 0	string		StartFontMetrics	ASCII font metrics
 0	string		StartFont	ASCII font bits
 0	long		0x137A2944	NeWS bitmap font
