--- a/doc/magic.man
+++ b/doc/magic.man
@@ -3,14 +3,17 @@
 .SH NAME
 magic \- file command's magic number file
 .SH DESCRIPTION
-The
-.IR file (__CSECTION__)
+This manual page documents the format of the magic file as
+used by the
+.BR file (__CSECTION__)
+command, version __VERSION__. The
+.B file
 command identifies the type of a file using,
 among other tests,
 a test for whether the file begins with a certain
 .IR "magic number" .
 The file
-.B __MAGIC__
+.I __MAGIC__
 specifies what magic numbers are to be tested for,
 what message to print if a particular magic number is found,
 and additional information to extract from the file.
@@ -113,7 +116,7 @@ then presumably print that string, by doing
 .IP message
 The message to be printed if the comparison succeeds.  If the string
 contains a
-.IR printf (3S)
+.BR printf (3S)
 format specification, the value from the file (with any specified masking
 performed) is printed using the message as the format string.
 .PP
@@ -185,7 +188,7 @@ a system on which the lengths are invariant.
 There is (currently) no support for specified-endian data to be used in
 indirect offsets.
 .SH SEE ALSO
-.IR file (__CSECTION__)
+.BR file (__CSECTION__)
 \- the command that reads this file.
 .\"
 .\" From: guy@sun.uucp (Guy Harris)
@@ -200,4 +203,4 @@ indirect offsets.
 .\" the changes I posted to the S5R2 version.
 .\"
 .\" Modified for Ian Darwin's version of the file command.
-.\" @(#)$Id: magic.man,v 1.13 1996/06/22 22:04:22 christos Exp $
+.\" @(#)$Id: magic.man,v 1.14 1996/06/22 22:05:07 christos Exp $
