--- a/doc/file.man
+++ b/doc/file.man
@@ -1,5 +1,5 @@
 .TH FILE __CSECTION__ "Copyright but distributable"
-.\" $Id: file.man,v 1.30 1997/11/05 16:03:18 christos Exp $
+.\" $Id: file.man,v 1.31 1998/02/15 23:18:53 christos Exp $
 .SH NAME
 file
 \- determine file type
@@ -231,7 +231,7 @@ postal address: P.O. Box 603, Station F, Toronto, Ontario, CANADA M4Y 2L8.
 Altered by Rob McMahon, cudcv@warwick.ac.uk, 1989, to extend the `&' operator
 from simple `x&y != 0' to `x&y op z'.
 .PP
-Altered by Guy Harris, guy@auspex.com, 1993, to:
+Altered by Guy Harris, guy@netapp.com, 1993, to:
 .RS
 .PP
 put the ``old-style'' `&'
