--- a/doc/file.man
+++ b/doc/file.man
@@ -1,12 +1,12 @@
 .TH FILE __CSECTION__ "Copyright but distributable"
-.\" $Id: file.man,v 1.31 1998/02/15 23:18:53 christos Exp $
+.\" $Id: file.man,v 1.32 1999/01/14 15:54:00 christos Exp $
 .SH NAME
 file
 \- determine file type
 .SH SYNOPSIS
 .B file
 [
-.B \-vbczL
+.B \-bcnvzL
 ]
 [
 .B \-f
@@ -105,16 +105,6 @@ archives) and determine whether an unknown file should be
 labelled as `ascii text' or `data'. 
 .SH OPTIONS
 .TP 8
-.B \-v
-Print the version of the program and exit.
-.TP 8
-.B \-m list
-Specify an alternate list of files containing magic numbers.
-This can be a single file, or a colon-separated list of files.
-.TP 8
-.B \-z
-Try to look inside compressed files.
-.TP 8
 .B \-b
 Do not prepend filenames to output lines (brief mode).
 .TP 8
@@ -133,6 +123,21 @@ Either
 .I namefile
 or at least one filename argument must be present;
 to test the standard input, use ``-'' as a filename argument.
+.TP 8
+.B \-m list
+Specify an alternate list of files containing magic numbers.
+This can be a single file, or a colon-separated list of files.
+.TP 8
+.B \-n
+Force stdout to be flushed after check a file. This is only useful if
+checking a list of files. It is intended to be used by programs want
+filetype output from a pipe.
+.TP 8
+.B \-v
+Print the version of the program and exit.
+.TP 8
+.B \-z
+Try to look inside compressed files.
 .TP 8
 .B \-L
 option causes symlinks to be followed, as the like-named option in
