--- a/doc/file.man
+++ b/doc/file.man
@@ -1,12 +1,12 @@
 .TH FILE __CSECTION__ "Copyright but distributable"
-.\" $Id: file.man,v 1.34 2000/04/11 02:32:35 christos Exp $
+.\" $Id: file.man,v 1.35 2000/05/14 17:58:36 christos Exp $
 .SH NAME
 file
 \- determine file type
 .SH SYNOPSIS
 .B file
 [
-.B \-bcinsvzL
+.B \-bciknsvzL
 ]
 [
 .B \-f
@@ -132,6 +132,9 @@ than "ASCII text". In order for this option to work, file changes the way
 it handles files recognised by the command it's self (such as many of the
 text file types, directories etc), and makes use of an alternative "magic" file.
 (See "FILES" section, below).
+.TP 8
+.B \-k
+Don't stop at the first match, keep going.
 .TP 8
 .B \-m list
 Specify an alternate list of files containing magic numbers.
