--- a/doc/file.man
+++ b/doc/file.man
@@ -1,5 +1,5 @@
 .TH FILE __CSECTION__ "Copyright but distributable"
-.\" $Id: file.man,v 1.39 2001/04/27 22:48:33 christos Exp $
+.\" $Id: file.man,v 1.40 2002/05/16 15:26:54 christos Exp $
 .SH NAME
 file
 \- determine file type
@@ -325,7 +325,8 @@ $ file -s /dev/hda{,1,2,3,4,5,6,7,8,9,10}
 
 $ file -i file.c file /dev/hda
 file.c:      text/x-c
-file:        application/x-executable, dynamically linked (uses shared libs), not stripped
+file:        application/x-executable, dynamically linked (uses shared libs),
+not stripped
 /dev/hda:    application/x-not-regular-file
 
 .fi
